Fixed uri special character issue preventing loading of ntuple files into Neptune.

--- a/Association_Worker/Association_Miner.ipynb
+++ b/Association_Worker/Association_Miner.ipynb
@@ -37,14 +37,18 @@
    "outputs": [],
    "source": [
     "# Flatten results into array of predicate object pairs per subjct\n",
+    "import urllib.parse\n",
+    "\n",
     "triples = results['results']['bindings']\n",
     "current_subject = None\n",
     "matrix_of_pred_obj_pairs_all_subj = []\n",
     "array_of_pred_obj_pairs_per_subj = []\n",
     "for triple in triples:\n",
     "    if current_subject == None or current_subject != triple['s']['value']:\n",
+    "        print(triple['s']['value'])\n",
     "        # Push this subjects pred obj pairs to the matrix\n",
     "        if len(array_of_pred_obj_pairs_per_subj) > 0:\n",
+    "            print(array_of_pred_obj_pairs_per_subj)\n",
     "            matrix_of_pred_obj_pairs_all_subj.append(array_of_pred_obj_pairs_per_subj)\n",
     "        \n",
     "        # Set new subject and clear subj pairs array\n",
@@ -52,7 +56,9 @@
     "        array_of_pred_obj_pairs_per_subj = []\n",
     "    \n",
     "    # Add pred obj pairs to array\n",
-    "    array_of_pred_obj_pairs_per_subj.append(triple['p']['value'] + ' ' + triple['o']['value'])     "
+    "    predicate = urllib.parse.unquote_plus(triple['p']['value']).replace('urn:', '')\n",
+    "    object = urllib.parse.unquote_plus(triple['o']['value']).replace('urn:', '')\n",
+    "    array_of_pred_obj_pairs_per_subj.append(predicate + ' ' + object)   "
    ]
   },
   {
@@ -70,12 +76,16 @@
     "import pandas as pd\n",
     "from mlxtend.preprocessing import TransactionEncoder\n",
     "from mlxtend.frequent_patterns import fpgrowth\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "te = TransactionEncoder()\n",
     "te_ary = te.fit(matrix_of_pred_obj_pairs_all_subj).transform(matrix_of_pred_obj_pairs_all_subj)\n",
     "df = pd.DataFrame(te_ary, columns=te.columns_)\n",
     "\n",
-    "print(fpgrowth(df, min_support=0.6, use_colnames=True))"
+    "fpgrowth_df = fpgrowth(df, min_support=0.002, use_colnames=True)\n",
+    "\n",
+    "pd.set_option(\"display.max_colwidth\", 10000)\n",
+    "fpgrowth_df[fpgrowth_df.itemsets.str.len() > 1]"
    ]
   }
  ],
